Ansible/roles/deployment/files/wordpress/04-wordpress.yaml
---
##############################
### SERVICIO PARA WORDPRESS ##
##############################
#apiVersion: v1
#kind: Service
#metadata:
#  name: wordpress
#  labels:
#    app: wordpress
#spec:
#  ports:
#    - port: 80
#      protocol: TCP
#      targetPort: 80
#  selector:
#    app: wordpress
#    tier: frontend
#  type: LoadBalancer
#  # type: NodePort
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      nodePort: 31476
  selector:
    app: wordpress
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: pvc-wordpress
################################
### DEPLOYMENT PARA WORDPRESS ##
################################
#apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
#kind: Deployment
#metadata:
#  name: wordpress
#  labels:
#    app: wordpress
#spec:
#  selector:
#    matchLabels:
#      app: wordpress
#      tier: frontend
#  strategy:
#    type: Recreate
#  template:
#    metadata:
#      labels:
#        app: wordpress
#        tier: frontend
#    spec:
#      containers:
#      - image: wordpress:5.9-apache
#        name: wordpress
#        env:
#        - name: WORDPRESS_DB_HOST
#          value: mysql
#        - name: WORDPRESS_DB_PASSWORD
#          value: icalskdsddsdpasswrd
#        ports:
#        - containerPort: 80
#          name: wordpress
#        volumeMounts:
#        - name: wordpress-persistent-storage
#          mountPath: /var/www/html
#      volumes:
#      - name: wordpress-persistent-storage
#        persistentVolumeClaim:
#          claimName: pvc-wordpress
