Ansible/roles/deployment/files/wordpress/05-ingresswp.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
  annotations:
    haproxy.org/path-rewrite: "/"
spec:
  rules:
  - host: wordpressigm.unir
    http:
      paths:
      - path: "/wp"
        pathType: "Prefix"
        backend:
          service:
            name: wordpress
            port:
              number: 80
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: wordpress
            port:
              number: 80
